--- a/relay/sources/relayd/Cargo.toml
+++ b/relay/sources/relayd/Cargo.toml
@@ -48,6 +48,14 @@ reqwest = "0.9"
 chrono = { version = "0.4", features = ["serde"] }
 regex = "1.1"
 itertools = "0.8"
+tokio-process = "0.2.3"
+tokio-io = "0.1.12"
+hyper = "0.12.31"
+file = "1.1.2"
+data-encoding = "2.1.2"
+ring = "0.14.6"
+sha2 = "0.8.0"
+sha1 = "0.6.0"
 
 [dev-dependencies]
 criterion = "0.2"
