--- a/webapp/sources/rudder/rudder-core/pom.xml
+++ b/webapp/sources/rudder/rudder-core/pom.xml
@@ -140,6 +140,13 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
       <artifactId>quicklens_${scala-binary-version}</artifactId>
       <version>1.4.12</version>
     </dependency>
+
+    <!-- files utils -->
+    <dependency>
+      <groupId>com.github.pathikrit</groupId>
+      <artifactId>better-files_${scala-binary-version}</artifactId>
+    </dependency>
+
     <!-- Doobie for SQL queries -->
     <dependency>
       <groupId>org.tpolecat</groupId>
