--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ target*
 **/elm-stuff/*
 **/generated/*
 **/git-ignored/*
+webapp/sources/rudder/rudder-web/src/main/webapp/javascript/rudder/elm/*.js
