--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 [dependencies]
 maplit = "^1.0"
 enum_primitive = "*"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dependencies.nom]
 version = "^4.1"
