--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ maplit = "^1.0"
 enum_primitive = "*"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+structopt = "0.2"
 
 [dependencies.nom]
 version = "^4.1"
