Fixes #15150: Use tracing for logging

--- a/relay/sources/relayd/tools/config/logging.conf
+++ b/relay/sources/relayd/tools/config/logging.conf
@@ -4,7 +4,7 @@
 
 [general]
 # Global log level
-# Can be "critical", "error", "warning", "info", "debug" or "trace"
+# Can be "error", "warning", "info", "debug" or "trace"
 level = "info"
 
 [filter]
