--- a/relay/sources/relayd/Cargo.toml
+++ b/relay/sources/relayd/Cargo.toml
@@ -21,20 +21,14 @@ harness = false
 #### Good
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-nom = "5.0.0-beta1"
+nom = "5.0"
 # Could use native lib instead, but maybe not prod-ready
 flate2 = { version = "1.0", features = ["zlib"], default-features = false }
 diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
-# Compile dev and release with trace logs enabled
-slog = { version = "2.4", features = ["max_level_trace", "release_max_level_trace"] }
-slog-term = "2.4"
-slog-async = "2.3"
-slog-scope = "4.1"
-slog-stdlog = "3.0"
-slog-atomic = "2.0"
-slog-kvfilter = "0.7"
+lazy_static = "1.3"
 #### Bad (=Not widely used or <1.0)
-structopt = "0.2"
+structopt = { version = "0.2", features = [ "paw" ] }
+paw = "1.0"
 toml = "0.5"
 inotify = "0.7"
 openssl = "0.10"
@@ -42,12 +36,19 @@ openssl = "0.10"
 tokio = { version = "0.1", default-features = false, features = ["fs", "io", "reactor", "rt-full"] }
 tokio-signal = "0.2"
 tokio-threadpool = "0.1"
+# Compile dev and release with trace logs enabled
+log = "0.4"
+tracing = { git = "https://github.com/tokio-rs/tracing", features = ["max_level_trace", "release_max_level_trace"] }
+tracing-fmt = { git = "https://github.com/tokio-rs/tracing" }
+tracing-log = { git = "https://github.com/tokio-rs/tracing" }
+#tokio-trace-fmt = { path = "/home/amousset/projects/tracing/tracing-fmt" }
 futures = "0.1"
 warp = "0.1"
 reqwest = "0.9"
 chrono = { version = "0.4", features = ["serde"] }
 regex = "1.1"
 itertools = "0.8"
+md-5 = "0.8"
 
 [dev-dependencies]
 criterion = "0.2"
