--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -13,7 +13,7 @@ listen = "127.0.0.1:3030"
 [processing.inventory]
 directory = "/var/rudder/inventories"
 # Can be "upstream" or "disabled"
-output = "webapp"
+output = "disabled"
 
 [processing.inventory.catchup]
 # In seconds
