--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 nom = "5.*"
 serde_json = "1.0"
 enum_primitive = "*"
+maplit = "^1.0"
 
 [dependencies.nom_locate]
 version = "^0.3"
