--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,14 @@ edition = "2018"
 
 [dependencies]
 maplit = "^1.0"
-enum_primitive = "*"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.2"
-
-[dependencies.nom]
-version = "^4.1"
-#features = ["verbose-errors"]
+nom = "^5.0"
 
 [dependencies.nom_locate]
 version = "^0.3"
-#features = ["verbose-errors"]
-path = "../nom_locate"
+path = "/home/bpeccatte/Projects/nom_locate"
 
 [dev-dependencies]
 proptest = "0.9.1"
