Fixes #15196: make the  remote run agent parameters configurable

--- a/relay/sources/relayd/tests/files/config/main.conf
+++ b/relay/sources/relayd/tests/files/config/main.conf
@@ -28,3 +28,6 @@ max_pool_size = 5
 url = "https://127.0.0.1:8080"
 user = "rudder"
 password = "password"
+
+[remote_run]
+command = "/opt/rudder/bin/rudder"
