--- a/relay/sources/relayd/tests/test_simple/config/main.conf
+++ b/relay/sources/relayd/tests/test_simple/config/main.conf
@@ -26,3 +26,6 @@ database.max_pool_size = 5
 upstream.url = "https://127.0.0.1:8080"
 upstream.user = "rudder"
 upstream.password = "password"
+
+[remote_run]
+command = "/opt/rudder/bin/rudder"
