--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -45,3 +45,6 @@ max_pool_size = 10
 url = "https://127.0.0.1:3030"
 user = "rudder"
 password = "password"
+
+[remote_run]
+command = "/opt/rudder/bin/rudder"
