Fixes #15204: Update relay component - Make tokio runtime configurable

--- a/relay/sources/relayd/tests/files/config/main.conf
+++ b/relay/sources/relayd/tests/files/config/main.conf
@@ -4,6 +4,10 @@ nodes_certs_file = "tests/keys/nodescerts.pem"
 node_id = "root"
 listen = "127.0.0.1:3030"
 
+# By default, the number of CPUs
+#core_threads = "4"
+blocking_threads = 100
+
 [processing.inventory]
 directory = "target/tmp/inventories/"
 output = "upstream"
