--- a/relay/sources/relayd/tests/test_simple/config/main.conf
+++ b/relay/sources/relayd/tests/test_simple/config/main.conf
@@ -3,6 +3,7 @@ nodes_list_file = "tests/files/nodeslist.json"
 nodes_certs_file = "tests/keys/nodescerts.pem"
 node_id = "root"
 listen = "127.0.0.1:3030"
+blocking_threads = 100
 
 [processing]
 
