--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -8,6 +8,10 @@ nodes_certs_file = "/opt/rudder/etc/ssl/nodescerts.pem"
 node_id = "root"
 listen = "127.0.0.1:3030"
 
+# By default, the number of CPUs
+#core_threads = "4"
+blocking_threads = 100
+
 ### Processing
 
 [processing.inventory]
