--- a/relay/sources/relayd/tests/test_simple/config/main.conf
+++ b/relay/sources/relayd/tests/test_simple/config/main.conf
@@ -29,4 +29,4 @@ upstream.user = "rudder"
 upstream.password = "password"
 
 [remote_run]
-command = "/opt/rudder/bin/rudder"
+command = "tests/fake_agent.sh"
