--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.2"
 nom = "^5.0"
+toml = "^0.5"
+regex = "^1.1"
+lazy_static = "^1.3"
 
 [dependencies.nom_locate]
 version = "^0.3"
