--- a/webapp/sources/pom.xml
+++ b/webapp/sources/pom.xml
@@ -381,7 +381,8 @@ limitations under the License.
     <http4s-version>0.19.0</http4s-version>
     <shapeless-version>2.3.3</shapeless-version>
     <cats-effect-version>1.0.0</cats-effect-version>
-    <dev-zio-version>1.0.0-RC8-6</dev-zio-version>
+    <dev-zio-version>1.0.0-RC9-4</dev-zio-version>
+    <zio-cats-version>1.3.1.0-RC3</zio-cats-version>
     <!--
       Hack to make scalac jvm parameters like RAM configurable.
       With that, one can override Xmx or add jvm parameters either
@@ -670,12 +671,7 @@ limitations under the License.
     <dependency>
       <groupId>dev.zio</groupId>
       <artifactId>zio-interop-cats_${scala-binary-version}</artifactId>
-      <version>${dev-zio-version}</version>
-    </dependency>
-    <dependency>
-      <groupId>dev.zio</groupId>
-      <artifactId>zio-interop-shared_${scala-binary-version}</artifactId>
-      <version>${dev-zio-version}</version>
+      <version>${zio-cats-version}</version>
     </dependency>
     <dependency>
       <groupId>org.typelevel</groupId>
