Fixes #15251: Add an option to allow disabling log_ reports insertion

--- a/relay/sources/relayd/tests/files/config/main.conf
+++ b/relay/sources/relayd/tests/files/config/main.conf
@@ -19,6 +19,7 @@ limit = 50
 [processing.reporting]
 directory = "target/tmp/runlogs/"
 output = "database"
+skip_logs = false
 
 [processing.reporting.catchup]
 frequency = 10
