--- a/relay/sources/relayd/tests/test_simple/config/main.conf
+++ b/relay/sources/relayd/tests/test_simple/config/main.conf
@@ -18,6 +18,7 @@ reporting.directory = "target/tmp/test_simple/"
 reporting.output = "database"
 reporting.catchup.frequency = 10
 reporting.catchup.limit = 50
+reporting.skip_logs = false
 #reporting.retention.success = 0
 #reporting.retention.failure = 7d
 
