--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -29,6 +29,7 @@ limit = 50
 directory = "/var/rudder/reports"
 # Can be "database", "upstream" or "disabled"
 output = "database"
+skip_logs = false
 
 [processing.reporting.catchup]
 # In seconds
