Fixes #15261: Update relay component - allow arbitrary log filter

--- a/relay/sources/relayd/tools/config/logging.conf
+++ b/relay/sources/relayd/tools/config/logging.conf
@@ -7,9 +7,9 @@
 # Can be "error", "warning", "info", "debug" or "trace"
 level = "info"
 
-[filter]
-# Filter to add more information on specific logs
-level = "debug"
-# Can be "database", "watcher", "parser" or "statistics"
-components = [ "database" ]
-nodes = [ "root" ]
+# Allows filtering logs
+# You can filter on a specific component with "[component]=LEVEL",
+# for example "[database]=trace".
+# Filter by node id using "[component{node=root}]".
+# Multiple filters can be separated by commas.
+filter = ""
