--- a/relay/sources/relayd/Cargo.toml
+++ b/relay/sources/relayd/Cargo.toml
@@ -25,7 +25,6 @@ nom = "5.0"
 # Could use native lib instead, but maybe not prod-ready
 flate2 = { version = "1.0", features = ["zlib"], default-features = false }
 diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
-lazy_static = "1.3"
 #### Bad (=Not widely used or <1.0)
 structopt = { version = "0.2", features = [ "paw" ] }
 paw = "1.0"
@@ -40,7 +39,7 @@ tokio-process = "0.2"
 tokio-io = "0.1"
 # Compile dev and release with trace logs enabled
 log = "0.4"
-tracing = { git = "https://github.com/tokio-rs/tracing", features = ["max_level_trace", "release_max_level_trace"] }
+tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_trace"] }
 tracing-fmt = { git = "https://github.com/tokio-rs/tracing" }
 tracing-log = { git = "https://github.com/tokio-rs/tracing" }
 futures = "0.1"
