Fixes #15333: Use relay reload command in relayd unit

--- a/relay/sources/systemd/rudder-relayd.service
+++ b/relay/sources/systemd/rudder-relayd.service
@@ -4,6 +4,7 @@ After=network-online.target
 
 [Service]
 ExecStart=/opt/rudder/bin/rudder-relayd
+ExecReload=/opt/rudder/bin/rudder relay reload
 User=rudder
 Group=rudder
 
