Fixes #15435: Forward reports to upper relays in relayd

--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -50,6 +50,7 @@ max_pool_size = 10
 url = "https://127.0.0.1:3030"
 user = "rudder"
 password = "password"
+verify_certificates = true
 
 [remote_run]
 command = "/opt/rudder/bin/rudder"
