--- a/relay/sources/relayd/tests/files/config/main.conf
+++ b/relay/sources/relayd/tests/files/config/main.conf
@@ -33,6 +33,7 @@ max_pool_size = 5
 url = "https://127.0.0.1:8080"
 user = "rudder"
 password = "password"
+verify_certificates = false
 
 [remote_run]
 command = "tests/fake_agent.sh"
