--- a/relay/sources/relayd/tests/test_simple/config/main.conf
+++ b/relay/sources/relayd/tests/test_simple/config/main.conf
@@ -28,6 +28,7 @@ database.max_pool_size = 5
 upstream.url = "https://127.0.0.1:8080"
 upstream.user = "rudder"
 upstream.password = "password"
+upstream.verify_certificates = false
 
 [remote_run]
 command = "tests/fake_agent.sh"
