--- a/webapp/sources/rudder/rudder-web/src/main/resources/configuration.properties.sample
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/configuration.properties.sample
@@ -532,10 +532,10 @@ rudder.hooks.ignore-suffixes= .swp, ~, .bak, \
 
 # We have to way to identify nodes: by key of by certificated. When certificates,
 # we update a file used by relayd at: /var/rudder/lib/ssl/allnodescerts.pem
-# After change, we need to notify relayd to reload that file. This is the relad
+# After change, we need to notify relayd to reload that file. This is the reload
 # command.
 #
-rudder.relayd.reload=/opt/rudder/bin/rudder relay reload
+rudder.relayd.reload=/opt/rudder/bin/rudder relay reload -p
 
 ###################
 # Fatal exceptions #############################################################
