--- a/relay/sources/rudder-pkg/rudder-pkg.conf
+++ b/relay/sources/rudder-pkg/rudder-pkg.conf
@@ -1,4 +1,4 @@
 [Rudder]
-url = http://download.rudder.io/plugins
+url = https://download.rudder.io/plugins
 username = username
 password = password
